--- a/data/package.json
+++ b/data/package.json
@@ -10,5 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "casperjs": "^1.1.4"
+  },
+  "dependencies": {
+    "bluebird": "^3.5.1",
+    "cheerio": "^1.0.0-rc.2"
   }
 }
